<resources>
    <string name="app_name">Lites</string>
    <string name="HOME">HOME</string>
    <string name="COMMUNITY">COMMUNITY</string>
    <string name="SEARCH">SEARCH</string>
    <string name="STORE">STORE</string>
    <string name="MY_PAGE">MY PAGE</string>

    <string name="native_app_key">25fe676103f31afc621f1ba5ec1d0b12</string>
    <string name="rest_app_key">41a32f97c949ead1e3f01c785642be08</string>

    <string name="firebase_web_client_id">408063195293-ani9hp2dlfdk3onojd198m6l64k4nmq8.apps.googleusercontent.com</string>

    <!-- 내정보 페이지 -->
    <string name="my_page">내정보</string>
    <string name="my_notice">공지사항</string>
    <string name="my_event">이벤트</string>
    <string name="my_inquiry">문의</string>
    <string name="my_inquiry_one">1:1 문의</string>
    <string name="my_inquiry_two">문의사항</string>
    <string name="my_setting">알림설정</string>
    <string name="my_management">계정관리</string>
    <string name="my_info">서비스 정보</string>
    <string name="my_act">내활동</string>

    <!-- 알림 페이지 -->
    <string name="basic_notice">일반 알림</string>
    <string name="marketing_notice">마케팅 알림</string>

    <!-- 로그인 페이지 -->
    <string name="emain_join">이메일 회원가입</string>
    <string name="emain_login">이메일 로그인</string>

    <!-- 반려견 정보입력 페이지 -->
    <string name="title1">반려동물에 대한 정보를 입력해주세요</string>
    <string name="sub_title1">지금부터 단계적으로 반려동물에 대한 정보를 입력하고\n유익한 정보 얻어가세요!</string>
    <string name="title2">이름과 생일을 입력해 주세요</string>
    <string name="title3">품종과 성별, 중성화 여부를\n선택해주세요</string>
    <string name="title4"></string>
    <string name="title5">BCS단계를 선택해주세요</string>
    <string name="title6">체중계를 연동하고\n우리아이 건강관리 시작해볼까요?</string>

    <string name="page1">1/4</string>
    <string name="page2">2/4</string>
    <string name="page3">3/4</string>
    <string name="page4">4/4</string>

    <string name="dog">강아지</string>
    <string name="cat">고양이</string>
    <string name="do_it_next">다음에 하기</string>
    <string name="name_input">이름 입력</string>
    <string name="birth_input">생일</string>
    <string name="variety">품종</string>
    <string name="gender">성별</string>
    <string name="female">여아</string>
    <string name="male">남아</string>
    <string name="neutralization">중성화</string>
    <string name="selected">선택완료</string>
    <string name="next">다음</string>
    <string name="scale_interlock">체중계 연동하러 가기</string>
    <string name="complete">완료</string>
    <string name="img_select">이미지선택</string>

    <string name="everything_area">전체지역</string>
    <string name="setting_area">지역 설정</string>

    <string name="go_to_community">커뮤니티로 이동</string>
    <string name="go_to_store">스토어로 이동</string>

    <string name="cm">cm</string>
    <string name="height_announce">신장은 이렇게 측정하면 돼요!</string>
    <string name="waist_announce">허리둘레는 이렇게 측정하면 돼요!</string>
    <string name="tab1">정보공유</string>
    <string name="tab2">수다방</string>
    <string name="tab3">피드</string>
    <string name="write_posting">게시글 작성</string>

    <string name="like">좋아요</string>
    <string name="comment">댓글</string>
    <string name="comment_input">댓글달기</string>

    <string name="posting_1">지역 설정해주세요</string>
    <string name="posting_2">게시물을 작성해주세요</string>
    <string name="posting_3">이미지를 선택해주세요</string>
    <string name="posting_hint_1">지역설정</string>
    <string name="posting_hint_2">제목작성</string>
    <string name="posting_hint_3">본문작성</string>

    <string name="mypet_bcs">%s 만을 위한\n 맞춤 케어 정보를 확인 하세요.</string>
    <string name="bcs_num">%d단계</string>
    <string name="bcs_num2">BCS %d단계</string>
    <string name="bcs_long">BCS(Body Condition Score)는 반려동물의 비만도를 구분하는 지표로 눈으로 살펴본 몸의 형태와 손으로 만져지는 지방의 정보를 기준으로 측정해요.</string>
    <string name="bcs_skinny">적정 체중을 목표로 증량 해주시고\n 컨디션 변화에 신경 써주세요.</string>
    <string name="bcs_data">%s 기준</string>
    <string name="bcs_food">%s의 기초대사량과 권장 사료량 이에요!</string>
    <string name="bcs_food_explanation">제공된 사료량은 미국 사료협회의 국제적으로 통용되고 있는 산식이며 사료의 부피나 무게에 따라 오차가 있을수 있습니다. 건강상태, 활동량 환경에 따라 실제 아이가 필요로 하는 식사량은 달라질수 있으니 참고용으로만 활용 해주세요.</string>
    <string name="bcs_activity">%s의 권장 활동량이에요!</string>
    <string name="bcs_activity_explanation">장시간과 고강도의 운동 및 산택은 관절에 무리를 줄 수 있습니다. 운동 시간은 반려동물에 따라 달라질수 있으니 무리를 줄수 있는 산책은 자제하며 운동시간을 조절해주세요.</string>

    <string name="graph_date">%s의 주간별 변화를</string>
    <string name="graph_month">%s의 월간별 변화를</string>
    <string name="graph_year">%s의 월간별 변화를</string>
    <string name="graph_dataEmpty">체중계를 연결하고 \n%s의 건강관리를 시작해보세요!</string>
    <string name="scale_on">체중계 연결</string>
    <string name="scale_off">체중계연결 끊기</string>


    <!--메인 탭 -->
    <string name="search_hospital">병원찾기</string>
    <string name="info_hospital">병원정보</string>
    <string name="search_address">병원주소 : %s</string>
    <string name="search_tell">전화번호 : %s</string>


    <string name="scale_connected">체중계 연결</string>
    <string name="scale_unconnected">체중계 연결 끊기</string>

    <!-- BCS -->
    <string name="bcs_1">갈비뼈, 요추, 골반뼈 그리고 모든 뼈 융기가 드러나며 체지방이 보이지 않으며 명백한 근육 손실이 보여요.</string>
    <string name="bcs_2">갈비뼈, 요추, 골반뼈가 보이며 지방이 만져지지 않고 몇몇 뼈 융기가 보이고 근육량의 적은 감소가 보여요.</string>
    <string name="bcs_3">갈비뼈가 만져지며 지방이 적다. 요추의 끝이 보이며 골반뼈 융기가 나타나고 허리와 복부가 홀쭉해요.</string>
    <string name="bcs_4">적당한 지방이 덮인 갈비뼈 쉽게 촉진되고 허리가 쉽게 구분되며 옆에서 봤을 때 배가 들어가 있어요.</string>
    <string name="bcs_5">많은 지방 없이 갈비뼈가 만져지며 위에서 봤을 때 갈비뼈 뒤에 허리가 보이며 옆에서 봤을 때 배가 들어가 있어요</string>
    <string name="bcs_6">약간 지방이 덮인 갈비뼈가 만져지며 허리가 구분되지 않으나 튀어나오지는 않았다. 복부가 들어가 있어요.</string>
    <string name="bcs_7">갈비뼈를 만지기 힘들다. 꼬리 부분에 지방의 축적이 보인다. 허리를 구분하기 힘들다. 배는 아직 들어가 있어요.</string>
    <string name="bcs_8">많은 지방이 덮고 있어 갈비뼈가 만져지지 않으며 살이 접힌다. 허리와 배가 구분이 안되며 복부의 팽창이 보여요.</string>
    <string name="bcs_9">많은 양의 지방이 목, 척추, 몸에 축적되어 살이 접히며 허리, 배가 구분이 안된다. 사지에도 지방이 축적되어 보여요.</string>



    <!-- test-->
    <string name="test_long">본문 내용을 보여줍니다.본문 내용을 보여 줍니다.본문 내용을 보여줍니다본문 내용을 보여줍니다.본문 내용을 보여줍니다.본문 내용을 보여 줍니다.본문 내용을 보여줍니다본문 내용을 보여줍니다.본문 내용을 보여줍니다.본문 내용을 보여 줍니다.본문 내용을 보여줍니다본문 내용을 보여줍니다.본문 내용을 보여줍니다.본문 내용을 보여 줍니다.본문 내용을 보여줍니다본문 내용을 보여줍니다.본문 내용을 보여줍니다.본문 내용을 보여 줍니다.본문 내용을 보여줍니다본문 내용을 보여줍니다.본문 내용을 보여줍니다.본문 내용을 보여 줍니다.본문 내용을 보여줍니다본문 내용을 보여줍니다.본문 내용을 보여줍니다.본문 내용을 보여 줍니다.본문 내용을 보여줍니다본문 내용을 보여줍니다.본문 내용을 보여줍니다.본문 내용을 보여 줍니다.본문 내용을 보여줍니다본문 내용을 보여줍니다.본문 내용을 보여줍니다.본문 내용을 보여 줍니다.본문 내용을 보여줍니다본문 내용을 보여줍니다.본문 내용을 보여줍니다.본문 내용을 보여 줍니다.본문 내용을 보여줍니다본문 내용을 보여줍니다.본문 내용을 보여줍니다.본문 내용을 보여 줍니다.본문 내용을 보여줍니다본문 내용을 보여줍니다.본문 내용을 보여줍니다.본문 내용을 보여 줍니다.본문 내용을 보여줍니다본문 내용을 보여줍니다.본문 내용을 보여줍니다.본문 내용을 보여 줍니다.본문 내용을 보여줍니다본문 내용을 보여줍니다.본문 내용을 보여줍니다.본문 내용을 보여 줍니다.본문 내용을 보여줍니다</string>

    <string name="empty_answer">아직 답변이 없습니다.</string>






</resources>