<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="vm"
            type="com.theshine.android.lites.ui.view.info.bcs.BcsViewModel" />

        <import type="android.view.View" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/page4"
            android:textColor="@color/black"
            android:textSize="16dp"
            android:layout_gravity="end"
            android:layout_margin="15dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title5"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="15dp"
            android:textSize="20dp"
            android:textColor="@color/black"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal"
            android:gravity="center"
            android:onClick="@{() -> vm.next()}"
            android:background="@color/green_DCF5">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/next"
                android:textSize="20dp"
                android:textColor="@color/green_009C"
                />

        </LinearLayout>

    </LinearLayout>


</layout>