<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="vm"
            type="com.theshine.android.lites.ui.view.info.scale.ScaleViewModel" />

        <import type="android.view.View" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/page5"
            android:textColor="@color/black"
            android:textSize="16dp"
            android:layout_gravity="end"
            android:layout_margin="15dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title6"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="15dp"
            android:textSize="20dp"
            android:textColor="@color/black"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="40dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/bg_square_d9d9_radius_10dp"
                android:text="@string/go_to_community"
                android:textSize="20dp"
                android:textColor="@color/black"
                android:gravity="center"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/bg_square_d9d9_radius_10dp"
                android:text="@string/go_to_store"
                android:textSize="20dp"
                android:textColor="@color/black"
                android:gravity="center"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_margin="30dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="체중계를 보유하고 있다면?"
                android:textColor="@color/black"
                android:textSize="16dp"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal"
            android:gravity="center"
            android:onClick="@{() -> vm.next()}"
            android:background="@color/green_DCF5">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/scale_interlock"
                android:textSize="20dp"
                android:textColor="@color/green_009C"
                />

        </LinearLayout>

    </LinearLayout>


</layout>