<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="vm"
            type="com.theshine.android.lites.ui.view.main.community.post.PostWriteViewModel" />

        <import type="android.view.View" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/layout_title"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_arrow_back"
                android:onClick="@{() -> vm.onClickBack()}"
                android:layout_gravity="center"
                android:layout_marginLeft="15dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/write_posting"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:layout_marginRight="30dp"
                    android:textSize="15dp"
                    android:textColor="@color/black"/>

        </LinearLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout_title"
            >

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvDate"
                    android:text="@{vm.toDay}"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:textSize="14dp"
                    android:layout_marginTop="15dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/posting_1"
                        android:textSize="15dp"
                        android:layout_marginRight="15dp"
                        android:layout_marginLeft="15dp"
                        android:textColor="@color/black"/>

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/selectorArea"
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:hint="@string/posting_hint_1"
                        android:gravity="center_vertical"
                        android:padding="10dp"
                        android:textSize="15dp"
                        android:text="@{vm.region}"
                        android:layout_marginRight="15dp"
                        android:layout_marginLeft="15dp"
                        android:onClick="@{() -> vm.selectRegion()}"
                        android:textColor="@color/black"
                        android:background="@drawable/bg_square_f9f8_radius_6dp"
                        android:layout_marginTop="10dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/posting_2"
                        android:textSize="15dp"
                        android:textColor="@color/black"
                        android:layout_marginRight="15dp"
                        android:layout_marginLeft="15dp"
                        android:layout_marginTop="20dp"/>

                    <EditText
                        android:id="@+id/etTitle"
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:hint="@string/posting_hint_2"
                        android:padding="10dp"
                        android:textSize="15dp"
                        android:text="@={vm.title}"
                        android:textColor="@color/black"
                        android:layout_marginRight="15dp"
                        android:layout_marginLeft="15dp"
                        android:background="@drawable/bg_square_f9f8_radius_6dp"
                        android:layout_marginTop="10dp"/>

                    <EditText
                        android:id="@+id/etDescription"
                        android:layout_width="match_parent"
                        android:layout_height="270dp"
                        android:hint="@string/posting_hint_3"
                        android:padding="10dp"
                        android:textSize="15dp"
                        android:text="@={vm.content}"
                        android:gravity="start"
                        android:layout_marginRight="15dp"
                        android:layout_marginLeft="15dp"
                        android:textColor="@color/black"
                        android:background="@drawable/bg_square_f9f8_radius_6dp"
                        android:layout_marginTop="10dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/posting_3"
                        android:textSize="15dp"
                        android:layout_marginRight="15dp"
                        android:layout_marginLeft="15dp"
                        android:textColor="@color/black"
                        android:layout_marginTop="10dp"/>



                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginRight="15dp"
                        android:layout_marginLeft="15dp"
                        android:layout_marginBottom="15dp"
                        >


                        <androidx.cardview.widget.CardView
                            android:id="@+id/imageContainer_add"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            app:cardCornerRadius="6dp"
                            android:layout_marginRight="6dp"
                            android:backgroundTint="@color/yellow_F9F8"
                            android:elevation="0dp"
                            app:cardElevation="0dp"
                            android:onClick="@{() -> vm.addPhoto()}">

                            <ImageView
                                android:id="@+id/test"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:padding="10dp"
                                android:src="@drawable/ic_baseline_add_24"
                                android:layout_gravity="center"/>

                        </androidx.cardview.widget.CardView>

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/rvImageList"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal"
                            bindImageList="@{vm.listUrl}"
                            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                            android:overScrollMode="never">

                        </androidx.recyclerview.widget.RecyclerView>

                    </LinearLayout>


                    <LinearLayout
                        android:id="@+id/layout_next"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:orientation="horizontal"
                        android:gravity="center"
                        android:onClick="@{() -> vm.uploadFeed()}"
                        android:background="@drawable/btn_next"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/complete"
                            android:textSize="20dp"
                            android:textColor="@color/white"
                            android:fontFamily="@font/font_medium"/>

                    </LinearLayout>

                </LinearLayout>


            </androidx.appcompat.widget.LinearLayoutCompat>



        </androidx.core.widget.NestedScrollView>

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="@{vm.isLoading() ? View.VISIBLE : View.GONE}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>